+ border gradient radius input

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- displays site properly based on user's device -->
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
@@ -19,7 +19,7 @@
 <body>
     <div class="container">
         <div class="row main py-5">
-            <div class="cards col-xl">
+            <div class="cards col-md">
                 <div class="frontCard">
                     <img src="./images/bg-card-front.png" class="img-fluid" />
                     <div class="firstCardData">
@@ -46,7 +46,7 @@
                     <div class="cvv">000</div>
                 </div>
             </div>
-            <div class="inputInfo col-xl">
+            <div class="inputInfo col-md">
                 <form>
                     <div class="dataWrap">
                         <label>Cardholder Name</label><br>
