--- a/index.html
+++ b/index.html
@@ -18,17 +18,19 @@
 
 <body>
     <div class="container">
-        <div class="row main py-5">
+        <div class="row main py-1">
             <div class="cards col-md">
                 <div class="frontCard">
                     <img src="./images/bg-card-front.png" class="img-fluid" />
                     <div class="firstCardData">
-                        <svg width="84" height="47" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <ellipse cx="23.478" cy="23.5" rx="23.478" ry="23.5" fill="#fff" />
-                            <path
-                                d="M83.5 23.5c0 5.565-4.507 10.075-10.065 10.075-5.559 0-10.065-4.51-10.065-10.075 0-5.565 4.506-10.075 10.065-10.075 5.558 0 10.065 4.51 10.065 10.075Z"
-                                stroke="#fff" />
-                        </svg>
+                        <div class="logo">
+                            <svg width="84" height="47" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <ellipse cx="23.478" cy="23.5" rx="23.478" ry="23.5" fill="#fff" />
+                                <path
+                                    d="M83.5 23.5c0 5.565-4.507 10.075-10.065 10.075-5.559 0-10.065-4.51-10.065-10.075 0-5.565 4.506-10.075 10.065-10.075 5.558 0 10.065 4.51 10.065 10.075Z"
+                                    stroke="#fff" />
+                            </svg>
+                        </div>
                         <div class="numberCard">
                             <span>0000</span>
                             <span>0000</span>
@@ -67,7 +69,7 @@
                             <input type="text" name="cvc" placeholder="e.g. 123" class="elseBlock">
                         </div>
                     </div>
-                    <input type="submit" value="Confirm" class="dataWrap mt-4 button">
+                    <button type="submit" value="Confirm" class="my-4 button">Confirm</button>
                 </form>
             </div>
         </div>
