--- a/index.html
+++ b/index.html
@@ -31,48 +31,64 @@
                                     stroke="#fff" />
                             </svg>
                         </div>
-                        <div class="numberCard">
-                            <span>0000</span>
-                            <span>0000</span>
-                            <span>0000</span>
-                            <span>0000</span>
+                        <div class="numberCard" id="numCard">
+                            0000 0000 0000 0000
                         </div>
                         <div class="infoOther">
                             <span id="nameCard">Jane Appleseed</span>
-                            <span id="dateCard">00/00</span>
+                            <span id="dateCard">
+                                <span id="mmCard">
+                                    00
+                                </span>
+                                <span>/</span>
+                                <span id="yyCard">
+                                    00
+                                </span>
                         </div>
                     </div>
                 </div>
                 <div class="backCard m-5">
                     <img src="./images/bg-card-back.png" class="img-fluid" />
-                    <div class="cvv">000</div>
+                    <div class="cvv" id="cvcCard">000</div>
                 </div>
             </div>
             <div class="inputInfo col-md">
-                <form>
+                <form id="userInfoForm">
                     <div class="dataWrap">
                         <label>Cardholder Name</label><br>
-                        <input type="text" name="nameCard" placeholder="e.g. Jane Appleseed">
+                        <input type="text" name="nameCard" id="userName" placeholder="e.g. Jane Appleseed" required>
                     </div>
                     <div class="dataWrap">
                         <label>Card Number</label><br>
-                        <input type="text" name="numberCard" placeholder="e.g. 1234 5678 9123 0000">
+                        <input type="text" name="numberCard" id="userNumber" maxlength="16" minlength="16"
+                            placeholder="e.g. 1234 5678 9123 0000" required pattern="\d*">
+                        <label for="numberCard" class="wrongFormat" id="labelNumber"></label>
                     </div>
                     <div class="dataWrap dataCardMMYYCVC">
                         <div class="dateData">
                             <label>Exp. Date (MM/YY)</label><br>
-                            <input type="text" name="mm" placeholder="MM" class="myBlock">
-                            <input type="text" name="yy" placeholder="YY" class="myBlock">
+                            <input type="text" name="mm" id="userMm" maxlength="2" minlength="2" placeholder="MM"
+                                class="myBlock" required pattern="\d*">
+                            <input type="text" name="yy" id="userYy" maxlength="2" minlength="2" placeholder="YY"
+                                class="myBlock" required pattern="\d*">
+
                         </div>
                         <div class="cvvData">
                             <label> CVC</label><br>
-                            <input type="text" name="cvc" placeholder="e.g. 123" class="elseBlock">
+                            <input type="text" name="cvc" id="userCvc" maxlength="3" minlength="3"
+                                placeholder="e.g. 123" class="elseBlock" required pattern="\d*">
                         </div>
+                    </div>
+                    <div class="labels">
+                        <label class="wrongFormat mmstyle" id="labelMm"></label>
+                        <label for="cvc" class="wrongFormat cvcstyle" id="labelCvc"></label>
                     </div>
                     <button type="submit" value="Confirm" class="my-4 button">Confirm</button>
                 </form>
             </div>
+
         </div>
+        <script src="src/index.js"></script>
     </div>
 </body>
 
