--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
                     </div>
                     <button type="submit" value="Confirm" class="my-4 button">Confirm</button>
                 </form>
+                <div class="gitHub">
+                    This website was coded by Iryna Filonova, and is
+                    <a href="https://github.com/wonder-filka/Interactive-card-details-form" target="_blank">open-sourced
+                    </a>
+                </div>
             </div>
 
         </main>
