--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container myContainer">
         <main class="row main py-1">
             <div class="cards col-md">
                 <div class="frontCard">
@@ -84,11 +84,7 @@
                     </div>
                     <button type="submit" value="Confirm" class="my-4 button">Confirm</button>
                 </form>
-                <div class="gitHub">
-                    This website was coded by Iryna Filonova, and is
-                    <a href="https://github.com/wonder-filka/Interactive-card-details-form" target="_blank">open-sourced
-                    </a>
-                </div>
+
             </div>
 
         </main>
